--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jaspervault/jvault.js",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "A javascript library for interacting with the JasperVault Protocol",
     "keywords": [
         "JVault.js",
@@ -81,6 +81,7 @@
         "jsonschema": "^1.2.6",
         "lodash": "^4.17.19",
         "sleep-promise": "^9.1.0",
+        "ts-node": "^10.9.2",
         "tspath": "^1.3.7",
         "web3": "^1.5.2"
     },
