--- a/src/utils/coreAssets.json
+++ b/src/utils/coreAssets.json
@@ -1471,7 +1471,7 @@
         "USDbC": "0xd9aAEc86B65D86f6A7B5B1b0c42FFA531710b6CA",
         "USDC": "0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913",
         "DAI": "0x50c5725949a6f0c72e6c4a641f24049a917db0cb",
-        "cbBTC": "0xcbB7C0000aB88B473b1f5aFd9ef808440eed33Bf"
+        "CBBTC": "0xcbB7C0000aB88B473b1f5aFd9ef808440eed33Bf"
     },
     "sei": {
         "SEI": "usei",
