--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "@0xproject/typescript-typings": "^3.0.2",
         "@0xproject/utils": "^2.0.2",
         "@account-abstraction/sdk": "^0.6.0",
-        "@jaspervault/contracts-v2": "2.6.4",
+        "@jaspervault/contracts-v2": "^2.6.4",
         "@pythnetwork/pyth-evm-js": "^1.56.1",
         "@types/chai-as-promised": "^7.1.3",
         "@types/jest": "^26.0.5",
@@ -83,7 +83,8 @@
         "sleep-promise": "^9.1.0",
         "ts-node": "^10.9.2",
         "tspath": "^1.3.7",
-        "web3": "^1.5.2"
+        "web3": "^1.5.2",
+        "winston": "^3.17.0"
     },
     "files": [
         "src",
