--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jaspervault/jvault.js",
-    "version": "0.2.22",
+    "version": "0.2.23",
     "description": "A javascript library for interacting with the JasperVault Protocol",
     "keywords": [
         "JVault.js",
@@ -83,8 +83,7 @@
         "sleep-promise": "^9.1.0",
         "ts-node": "^10.9.2",
         "tspath": "^1.3.7",
-        "web3": "^1.5.2",
-        "winston": "^3.17.0"
+        "web3": "^1.5.2"
     },
     "files": [
         "src",
