--- a/src/utils/coreAssets.json
+++ b/src/utils/coreAssets.json
@@ -1835,5 +1835,10 @@
         "USDC": "0xff00000000000000000000000000000000000003",
         "ETH": "0xff00000000000000000000000000000000000001",
         "DUSD": "0xff0000000000000000000000000000000000000f"
+    },
+    "bnb": {
+        "BNB": "0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE",
+        "BTCB": "0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c",
+        "USDT": "0x55d398326f99059fF775485246999027B3197955"
     }
 }
